# vook_sns_v3

./: .gitignore  README.md
.github/ISSUE_TEMPLATE/: バグレポート.md  機能開発.md
notebook/: api_get_insight.ipynb  api_get_insight_vook.ipynb  output_to_google_drive.ipynb
tests/: pyproject.toml
tests/notebook/: api_get_insight.ipynb  api_get_insight_vook.ipynb
